===============  작업 일자 : 2018.01.10 ~  2018.01.12 (3일간)  작업 소요 시간 : 7시간 30분  작업 폼 : StaffNum.cs , SellMonitor.cs  작업 DB Table : dbo.CVS_LogRecod  추가 제작한 프로시저 및 클래스 : ms_checkstaffNum , ms_InsertLogRecord, ms_releaseTimeUpdate  ============ 로그인 화면에서 발생하는 로그는 모두 처리했으며, Staffnum 클래스에 public한 메서드로 처리 하였습니다. 필요시에 객체 생성하셔서 사용하시면 됩니다. (매개변수 필요한 메서드도 있으니 꼭 확인 후 사용 바랍니다.) 각 폼마다 발생하는 로그별로 다르게 날려야 하는 항목들이 있을 수도 있을 거 같아서 로그 테이블 수정 생각중이며, 프로그래머가 직접 확인 할 수 있는 창을 만들거나 로그기록만을 조회할 수 있는 창을 제작할 생각이 있습니다.
추후, 큰 수정 내용 있으면 회의를 통해 결정하도록 하겠습니다.

--- a/CSVPos/CSVPos/CSVPos.csproj
+++ b/CSVPos/CSVPos/CSVPos.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -54,6 +55,7 @@
     <Compile Include="CustomerAgeSex.Designer.cs">
       <DependentUpon>CustomerAgeSex.cs</DependentUpon>
     </Compile>
+    <Compile Include="DBController.cs" />
     <Compile Include="FormBill.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -233,7 +235,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="mainsmile.png" />
