--- a/CSVPos/CSVPos.csproj
+++ b/CSVPos/CSVPos.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,6 +50,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="checkLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="checkLog.Designer.cs">
+      <DependentUpon>checkLog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Connection.cs" />
     <Compile Include="CustomerAgeSex.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -159,6 +167,9 @@
     <Compile Include="StoreM.Designer.cs">
       <DependentUpon>StoreM.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="checkLog.resx">
+      <DependentUpon>checkLog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CustomerAgeSex.resx">
       <DependentUpon>CustomerAgeSex.cs</DependentUpon>
     </EmbeddedResource>
@@ -234,7 +245,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="mainsmile.png" />
