--- a/CSVPos/CSVPos.csproj
+++ b/CSVPos/CSVPos.csproj
@@ -56,6 +56,8 @@
     <Compile Include="checkLog.Designer.cs">
       <DependentUpon>checkLog.cs</DependentUpon>
     </Compile>
+    <Compile Include="claBarcode.cs" />
+    <Compile Include="claCodeData.cs" />
     <Compile Include="Connection.cs" />
     <Compile Include="CustomerAgeSex.cs">
       <SubType>Form</SubType>
@@ -272,6 +274,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="vs.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Barcode.csproj" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
